@@ -55,6 +55,7 @@ import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 
 import eu.xfsc.fc.core.config.DatabaseConfig;
+import eu.xfsc.fc.core.security.SecurityAuditorAware;
 import eu.xfsc.fc.core.config.FileStoreConfig;
 import eu.xfsc.fc.core.config.ProtectedNamespaceProperties;
 import eu.xfsc.fc.core.dao.schemas.SchemaJpaDao;
@@ -77,7 +78,7 @@ import lombok.extern.slf4j.Slf4j;
 @ActiveProfiles("test")
 @ContextConfiguration(classes = {SchemaStoreTest.TestApplication.class, FileStoreConfig.class,
   SchemaStoreTest.class, SchemaStoreImpl.class, DatabaseConfig.class, SchemaJpaDao.class, SchemaAuditRepository.class,
-  ProtectedNamespaceFilter.class, ProtectedNamespaceProperties.class})
+  ProtectedNamespaceFilter.class, ProtectedNamespaceProperties.class, SecurityAuditorAware.class})
 @Transactional
 @AutoConfigureEmbeddedDatabase(provider = DatabaseProvider.ZONKY)
 public class SchemaStoreTest {
@@ -104,7 +105,7 @@ public class SchemaStoreTest {
     Set<String> extractedTermsSet = new HashSet<>();
     try ( InputStream resource = extractedTerms.getContentAsStream()) {
       List<String> extractedList = new BufferedReader(new InputStreamReader(resource,
-          StandardCharsets.UTF_8)).lines().collect(Collectors.toList());
+          StandardCharsets.UTF_8)).lines().toList();
       extractedTermsSet = new HashSet<>(extractedList);
     }
     return extractedTermsSet;
@@ -144,8 +145,8 @@ public class SchemaStoreTest {
   @Test
   public void testIsValidShape() {
     Set<String> expectedExtractedUrlsSet = new HashSet<>();
-    expectedExtractedUrlsSet.add("http://w3id.org/gaia-x/validation#PhysicalResourceShape");
-    expectedExtractedUrlsSet.add("http://w3id.org/gaia-x/validation#MeasureShape");
+    expectedExtractedUrlsSet.add("https://w3id.org/gaia-x/2511#PhysicalResourceShape");
+    expectedExtractedUrlsSet.add("https://w3id.org/gaia-x/2511#MeasureShape");
     String path = "Schema-Tests/valid-schemaShape.ttl";
     ContentAccessor content = TestUtil.getAccessor(getClass(), path);
     SchemaAnalysisResult result = schemaStore.analyzeSchema(content);
@@ -181,20 +182,20 @@ public class SchemaStoreTest {
   @Test
   public void testValidOntology() {
     Set<String> expectedExtractedUrlsSet = new HashSet<>();
-    expectedExtractedUrlsSet.add("http://w3id.org/gaia-x/core#providesResourcesFrom");
-    expectedExtractedUrlsSet.add("http://w3id.org/gaia-x/core#Interconnection");
-    expectedExtractedUrlsSet.add("http://w3id.org/gaia-x/core#Consumer");
-    expectedExtractedUrlsSet.add("http://w3id.org/gaia-x/core#Provider");
-    expectedExtractedUrlsSet.add("http://w3id.org/gaia-x/core#AssetOwner");
-    expectedExtractedUrlsSet.add("http://w3id.org/gaia-x/core#ServiceOffering");
-    expectedExtractedUrlsSet.add("http://w3id.org/gaia-x/core#Contract");
+    expectedExtractedUrlsSet.add("https://w3id.org/gaia-x/2511#providesResourcesFrom");
+    expectedExtractedUrlsSet.add("https://w3id.org/gaia-x/2511#Interconnection");
+    expectedExtractedUrlsSet.add("https://w3id.org/gaia-x/2511#Consumer");
+    expectedExtractedUrlsSet.add("https://w3id.org/gaia-x/2511#Provider");
+    expectedExtractedUrlsSet.add("https://w3id.org/gaia-x/2511#AssetOwner");
+    expectedExtractedUrlsSet.add("https://w3id.org/gaia-x/2511#ServiceOffering");
+    expectedExtractedUrlsSet.add("https://w3id.org/gaia-x/2511#Contract");
     String path = "Schema-Tests/validOntology.ttl";
     ContentAccessor content = TestUtil.getAccessor(getClass(), path);
     SchemaAnalysisResult result = schemaStore.analyzeSchema(content);
     boolean actual = schemaStore.isSchemaType(content, ONTOLOGY);
     Set<String> actualExtractedUrlsSet = result.getExtractedUrls();
     String extractedIdActual = result.getExtractedId();
-    String extractedIdExpected = "http://w3id.org/gaia-x/core#";
+    String extractedIdExpected = "https://w3id.org/gaia-x/2511#";
     assertTrue(result.isValid());
     assertEquals(extractedIdExpected, extractedIdActual);
     assertEquals(expectedExtractedUrlsSet.size(), actualExtractedUrlsSet.size());
@@ -255,9 +256,9 @@ public class SchemaStoreTest {
   }
   
   @Test
-  public void testValidJSONlD() throws UnsupportedEncodingException {
+  public void testValidJSONlD() {
     Set<String> expectedExtractedUrlsSet = new HashSet<>();
-    expectedExtractedUrlsSet.add("http://w3id.org/gaia-x/validation#PhysicalResourceShape");
+    expectedExtractedUrlsSet.add("https://w3id.org/gaia-x/2511#PhysicalResourceShape");
     String path = "Schema-Tests/validShacl.jsonld";
     ContentAccessor content = TestUtil.getAccessor(getClass(), path);
     SchemaAnalysisResult result = schemaStore.analyzeSchema(content);
@@ -271,9 +272,9 @@ public class SchemaStoreTest {
   }
   
   @Test
-  public void testValidRDFXML() throws UnsupportedEncodingException {
+  public void testValidRDFXML() {
     Set<String> expectedExtractedUrlsSet = new HashSet<>();
-    expectedExtractedUrlsSet.add("http://w3id.org/gaia-x/validation#PhysicalResourceShape");
+    expectedExtractedUrlsSet.add("https://w3id.org/gaia-x/2511#PhysicalResourceShape");
     String path = "Schema-Tests/validShacl.rdfxml";
     ContentAccessor content = TestUtil.getAccessor(getClass(), path);
     SchemaAnalysisResult result = schemaStore.analyzeSchema(content);
@@ -297,11 +298,13 @@ public class SchemaStoreTest {
 
     String schemaId1 = schemaStore.addSchema(content).id();
 
-    Map<SchemaStore.SchemaType, List<String>> expected = new HashMap<>();
-    expected.computeIfAbsent(SHAPE, t -> new ArrayList<>()).add(schemaId1);
     Map<SchemaStore.SchemaType, List<String>> schemaList = schemaStore.getSchemaList();
-    assertEquals(expected, schemaList);
-    assertTermsEquals("http://w3id.org/gaia-x/validation#PhysicalResourceShape", "http://w3id.org/gaia-x/validation#MeasureShape");
+    assertEquals(List.of(schemaId1), schemaList.get(SHAPE));
+    assertTrue(schemaList.get(ONTOLOGY).isEmpty());
+    assertTrue(schemaList.get(VOCABULARY).isEmpty());
+    assertTrue(schemaList.get(JSON).isEmpty());
+    assertTrue(schemaList.get(XML).isEmpty());
+    assertTermsEquals("https://w3id.org/gaia-x/2511#PhysicalResourceShape", "https://w3id.org/gaia-x/2511#MeasureShape");
 
     schemaStore.deleteSchema(schemaId1);
   }
@@ -323,7 +326,7 @@ public class SchemaStoreTest {
    *
    */
   @Test
-  public void testAddSchemaWithLongContent() throws IOException {
+  public void testAddSchemaWithLongContent() {
     log.info("testAddSchemaWithLongContent");
 
     String path = "Schema-Tests/schema.ttl";
@@ -343,7 +346,7 @@ public class SchemaStoreTest {
    * Test of addSchema method, of class SchemaManagementImpl. Adding the schema twice
    */
   @Test
-  public void testAddDuplicateSchema() throws IOException {
+  public void testAddDuplicateSchema() {
     log.info("testAddDuplicateSchema");
     String path = "Schema-Tests/valid-schemaShape.ttl";
     schemaStore.addSchema(TestUtil.getAccessor(getClass(), path));
@@ -384,24 +387,24 @@ public class SchemaStoreTest {
    * Test of updateSchema method, of class SchemaManagementImpl.
    */
   @Test
-  public void test03UpdateSchema() throws IOException {
+  public void test03UpdateSchema() {
     log.info("UpdateSchema");
     String path1 = "Schema-Tests/valid-schemaShapeReduced.ttl";
     String path2 = "Schema-Tests/valid-schemaShape.ttl";
 
     String schemaId = schemaStore.addSchema(TestUtil.getAccessor(getClass(), path1)).id();
     assertTermCountEquals(1);
-    assertTermsEquals("http://w3id.org/gaia-x/validation#PhysicalResourceShape");
+    assertTermsEquals("https://w3id.org/gaia-x/2511#PhysicalResourceShape");
 
     schemaStore.updateSchema(schemaId, TestUtil.getAccessor(getClass(), path2));
     assertTermCountEquals(2);
-    assertTermsEquals("http://w3id.org/gaia-x/validation#PhysicalResourceShape", "http://w3id.org/gaia-x/validation#MeasureShape");
+    assertTermsEquals("https://w3id.org/gaia-x/2511#PhysicalResourceShape", "https://w3id.org/gaia-x/2511#MeasureShape");
     assertEquals(TestUtil.getAccessor(getClass(), path2).getContentAsString(), schemaStore.getSchema(schemaId).getContentAsString(), 
             "The content of the updated schema should be stored in the schema DB.");
 
     schemaStore.updateSchema(schemaId, TestUtil.getAccessor(getClass(), path1));
     assertTermCountEquals(1);
-    assertTermsEquals("http://w3id.org/gaia-x/validation#PhysicalResourceShape");
+    assertTermsEquals("https://w3id.org/gaia-x/2511#PhysicalResourceShape");
     assertEquals(TestUtil.getAccessor(getClass(), path1).getContentAsString(), schemaStore.getSchema(schemaId).getContentAsString(), 
             "The content of the updated schema should be stored in the schema DB.");
 
@@ -411,32 +414,28 @@ public class SchemaStoreTest {
   @Test
   void testAddDeleteDefaultSchemas() {
     int initialized = schemaStore.initializeDefaultSchemas();
-    assertEquals(4, initialized, "Expected different number of schemas initialized.");
-    //int count = TestUtil.countFilesInStore(fileStore);
-    //assertEquals(3, count, "Expected different number of files in the store.");
+    assertEquals(2, initialized, "Expected different number of schemas initialized.");
     Map<SchemaType, List<String>> schemaList = schemaStore.getSchemaList();
-    assertEquals(3, schemaList.get(SchemaType.ONTOLOGY).size());
+    assertEquals(1, schemaList.get(SchemaType.ONTOLOGY).size());
     assertEquals(1, schemaList.get(SchemaType.SHAPE).size());
-    assertTrue(schemaList.get(SchemaType.ONTOLOGY).contains("https://w3id.org/gaia-x/gax-trust-framework#"), "Ontology identifier not found in schema list.");
-    assertTrue(schemaList.get(SchemaType.ONTOLOGY).contains("https://w3id.org/gaia-x/core#"), "Ontology identifier not found in schema list.");
-    assertTrue(schemaList.get(SchemaType.ONTOLOGY).contains("https://registry.lab.gaia-x.eu/development/api/trusted-shape-registry/v1/shapes/jsonld/trustframework#"), "Ontology identifier not found in schema list.");
-    schemaStore.deleteSchema("https://w3id.org/gaia-x/gax-trust-framework#");
+    assertTrue(schemaList.get(SchemaType.ONTOLOGY).contains("https://w3id.org/gaia-x/2511"), "2511 ontology identifier not found in schema list.");
+    schemaStore.deleteSchema("https://w3id.org/gaia-x/2511");
     Map<SchemaType, List<String>> schemaListDelete = schemaStore.getSchemaList();
-    assertFalse(schemaListDelete.get(SchemaType.ONTOLOGY).contains("https://w3id.org/gaia-x/gax-trust-framework#"), "Ontology identifier not found in schema list.");
-    assertEquals(2, schemaListDelete.get(SchemaType.ONTOLOGY).size());
+    assertTrue(schemaListDelete.get(SchemaType.ONTOLOGY).isEmpty(),
+        "Ontology schema list should be empty after deletion.");
   }
 
   /**
    * Test of getCompositeSchema method, of class SchemaManagementImpl.
    */
   @Test
-  public void testGetCompositeSchema() throws IOException {
+  public void testGetCompositeSchema() {
     Model modelActual = ModelFactory.createDefaultModel();
-    String sub01 = "http://w3id.org/gaia-x/validation#PhysicalResourceShape";
+    String sub01 = "https://w3id.org/gaia-x/2511#PhysicalResourceShape";
     String pre01 = "http://www.w3.org/1999/02/22-rdf-syntax-ns#type";
     String obj01 = "http://www.w3.org/ns/shacl#NodeShape";
 
-    String sub02 = "http://w3id.org/gaia-x/validation#DataConnectorShape";
+    String sub02 = "https://w3id.org/gaia-x/2511#DataConnectorShape";
     String pre02 = "http://www.w3.org/1999/02/22-rdf-syntax-ns#type";
     String obj02 = "http://www.w3.org/ns/shacl#NodeShape";
 
@@ -464,7 +463,7 @@ public class SchemaStoreTest {
 
     schemaStore.addSchema(TestUtil.getAccessor(getClass(), schemaPath2));
 
-    schemaResult = schemaStore.analyzeSchema(schema02Content);
+    schemaStore.analyzeSchema(schema02Content);
 
     compositeSchemaActual = schemaStore.getCompositeSchema(SHAPE);
 
@@ -606,7 +605,7 @@ public class SchemaStoreTest {
     schemaStore.deleteSchema("https://example.org/schemas/person");
 
     Map<SchemaType, List<String>> list = schemaStore.getSchemaList();
-    assertNull(list.get(JSON));
+    assertTrue(list.get(JSON).isEmpty());
   }
 
   @Test
@@ -676,13 +675,14 @@ public class SchemaStoreTest {
 
   @Test
   void addSchema_xmlSchemaWithDoctype_throwsVerificationException() {
-    String xxeSchema = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n"
-        + "<!DOCTYPE foo [\n"
-        + "  <!ENTITY xxe SYSTEM \"file:///etc/passwd\">\n"
-        + "]>\n"
-        + "<xs:schema xmlns:xs=\"http://www.w3.org/2001/XMLSchema\">\n"
-        + "  <xs:element name=\"test\" type=\"xs:string\"/>\n"
-        + "</xs:schema>";
+    String xxeSchema = """
+            <?xml version="1.0" encoding="UTF-8"?>
+            <!DOCTYPE foo [
+              <!ENTITY xxe SYSTEM "file:///etc/passwd">
+            ]>
+            <xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema">
+              <xs:element name="test" type="xs:string"/>
+            </xs:schema>""";
 
     assertThrowsExactly(VerificationException.class,
         () -> schemaStore.addSchema(new ContentAccessorDirect(xxeSchema), XML));
